fix line-wrapping learn-more buttons in firefox - closes #91

--- a/assets/sass/components/_body.scss
+++ b/assets/sass/components/_body.scss
@@ -258,7 +258,7 @@ html body {
 		width: 158px;
 	
 		.button {
-			width: 63px;
+			width: 65px;
 			padding: 6px;
 			display: inline-block;
 
