--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -542,7 +542,7 @@ html body .button-list {
 }
 /* line 260, ../sass/components/_body.scss */
 html body .button-list .button {
-  width: 63px;
+  width: 65px;
   padding: 6px;
   display: inline-block;
   font-size: 11px;
